--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         "php": "^7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.1",
-        "orchestra/testbench": "~3.5"
+        "phpunit/phpunit": "^6.1|^7.0",
+        "orchestra/testbench": "~3.5.0|~3.6.0"
     },
     "autoload": {
         "psr-4": {
