--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,12 @@
         }
     ],
     "require": {
-        "php": "^7.1"
+        "php": "^7.1",
+        "laravel/framework": "~5.5.0|~5.6.0|~5.7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.1|^7.0",
-        "orchestra/testbench": "~3.5.0|~3.6.0"
+        "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0"
     },
     "autoload": {
         "psr-4": {
