--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.1|^7.0",
-        "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0"
+        "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0|~3.8.0"
     },
     "autoload": {
         "psr-4": {
