--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0",
-        "illuminate/http": "~5.5.0|~5.6.0|~5.7.0",
-        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0"
+        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
+        "illuminate/http": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
+        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.1|^7.0",
-        "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0"
+        "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0|~3.8.0"
     },
     "autoload": {
         "psr-4": {
