--- a/.travis.yml
+++ b/.travis.yml
@@ -1,45 +1,17 @@
 language: php
 
-cache:
-  directories:
-    - $HOME/.composer/cache
+php:
+    - 7.2
+    - 7.3
 
-matrix:
-  fast_finish: true
-  include:
-    - php: 7.1
-      env: LARAVEL='5.5.*' TESTBENCH='3.5.*' COMPOSER_FLAGS='--prefer-lowest'
-    - php: 7.1
-      env: LARAVEL='5.5.*' TESTBENCH='3.5.*'
-    - php: 7.1
-      env: LARAVEL='5.6.*' TESTBENCH='3.6.*'
-    - php: 7.1
-      env: LARAVEL='5.7.*' TESTBENCH='3.7.*'
-    - php: 7.1
-      env: LARAVEL='5.8.*' TESTBENCH='3.8.*'
-    - php: 7.2
-      env: LARAVEL='5.5.*' TESTBENCH='3.5.*'
-    - php: 7.2
-      env: LARAVEL='5.6.*' TESTBENCH='3.6.*'
-    - php: 7.2
-      env: LARAVEL='5.7.*' TESTBENCH='3.7.*'
-    - php: 7.2
-      env: LARAVEL='5.8.*' TESTBENCH='3.8.*'
-    - php: 7.3
-      env: LARAVEL='5.5.*' TESTBENCH='3.5.*'
-    - php: 7.3
-      env: LARAVEL='5.6.*' TESTBENCH='3.6.*'
-    - php: 7.3
-      env: LARAVEL='5.7.*' TESTBENCH='3.7.*'
-    - php: 7.3
-      env: LARAVEL='5.8.*' TESTBENCH='3.8.*'
+env:
+    matrix:
+        - COMPOSER_FLAGS="--prefer-lowest"
+        - COMPOSER_FLAGS=""
 
-before_install:
-  - travis_retry composer self-update
-  - travis_retry composer require --no-update --no-interaction "illuminate/support:${LARAVEL}" "orchestra/testbench:${TESTBENCH}"
-
-install:
-  - travis_retry composer update --no-interaction --no-plugins --no-suggest --prefer-source ${COMPOSER_FLAGS}
+before_script:
+    - travis_retry composer self-update
+    - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
 
 script:
-  - vendor/bin/phpunit
+    - vendor/bin/phpunit --coverage-text
