--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,14 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
-        "illuminate/http": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
-        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0"
+        "php": "^7.2",
+        "illuminate/database": "~5.8.0",
+        "illuminate/http": "~5.8.0",
+        "illuminate/support": "~5.8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.1|^7.0|^8.0",
-        "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0|~3.8.0"
+        "phpunit/phpunit": "^7.5|^8.0",
+        "orchestra/testbench": "~3.8.0"
     },
     "autoload": {
         "psr-4": {
