--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
                   APP_ENV: test
         steps:
             - checkout
-            - run: sudo composer self-update
+            - run: composer self-update
             - restore_cache: # special step to restore the dependency cache if `composer.lock` does not change
                   keys:
                       - composer-v1-{{ checksum "composer.lock" }}
