--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,12 @@ shared: &shared
                       composer --version
             - run: vendor/bin/phpunit --coverage-text
 
+workflows:
+    version: 2
+    build:
+        jobs:
+            - "php-7.1-prefer-lowest"
+
 jobs:
     "php-7.1-prefer-lowest":
         <<: *shared
