--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,8 @@ workflows:
     version: 2
     build:
         jobs:
-            - "php-7.1"
-            - "php-7.1-prefer-lowest"
+            - php-7.1
+            - php-7.1-prefer-lowest
 
 jobs:
     "php-7.1-prefer-lowest":
