--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,19 +2,14 @@ version: 2
 
 shared: &shared
     working_directory: /var/www/html
-    environment:
-        APP_ENV: test
-        COMPOSER_FLAGS:
     steps:
         - checkout
         - run: composer self-update
         - run: composer update $COMPOSER_FLAGS --no-interaction --prefer-source
         - run:
-              name: Display PHP information
-              command: |
-                  php -v
-                  composer --version
-        - run: vendor/bin/phpunit
+            command: vendor/bin/phpunit
+            environment:
+                APP_ENV: test
 
 workflows:
     version: 2
@@ -26,10 +21,10 @@ workflows:
 jobs:
     "php-7.1-prefer-lowest":
         <<: *shared
-        environment:
-            COMPOSER_FLAGS: --prefer-lowest
         docker:
             - image: circleci/php:7.1
+              environment:
+                  COMPOSER_FLAGS: --prefer-lowest
     "php-7.1":
         <<: *shared
         docker:
