--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ shared: &shared
     steps:
         - checkout
         - run: composer self-update
-        - run: composer update $COMPOSER_FLAGS --no-interaction --prefer-source
+        - run: composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
         - run:
             command: vendor/bin/phpunit
             environment:
