--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,8 @@ version: 2
 
 shared: &shared
     working_directory: /var/www/html
+    environment:
+        APP_ENV: test
     steps:
         - checkout
         - run: echo $COMPOSER_FLAGS $APP_ENV
