--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,66 +22,66 @@ workflows:
     version: 2
     build:
         jobs:
-            - php7.1-laravel5.5
-            - php7.1-laravel5.5-prefer-lowest
-            - php7.2-laravel5.5
-            - php7.2-laravel5.5-prefer-lowest
-            - php7.3-laravel5.5
-            - php7.3-laravel5.5-prefer-lowest
-#            - php7.1-laravel5.6
-#            - php7.1-laravel5.6-prefer-lowest
-#            - php7.2-laravel5.6
-#            - php7.2-laravel5.6-prefer-lowest
-#            - php7.3-laravel5.6
-#            - php7.3-laravel5.6-prefer-lowest
-#            - php7.1-laravel5.7
-#            - php7.1-laravel5.7-prefer-lowest
-#            - php7.2-laravel5.7
-#            - php7.2-laravel5.7-prefer-lowest
-#            - php7.3-laravel5.7
-#            - php7.3-laravel5.7-prefer-lowest
-#            - php7.1-laravel5.8
-#            - php7.1-laravel5.8-prefer-lowest
-#            - php7.2-laravel5.8
-#            - php7.2-laravel5.8-prefer-lowest
-#            - php7.3-laravel5.8
-#            - php7.3-laravel5.8-prefer-lowest
+            - php71-laravel55
+            - php71-laravel55-prefer-lowest
+            - php72-laravel55
+            - php72-laravel55-prefer-lowest
+            - php73-laravel55
+            - php73-laravel55-prefer-lowest
+#            - php71-laravel56
+#            - php71-laravel56-prefer-lowest
+#            - php72-laravel56
+#            - php72-laravel56-prefer-lowest
+#            - php73-laravel56
+#            - php73-laravel56-prefer-lowest
+#            - php71-laravel57
+#            - php71-laravel57-prefer-lowest
+#            - php72-laravel57
+#            - php72-laravel57-prefer-lowest
+#            - php73-laravel57
+#            - php73-laravel57-prefer-lowest
+#            - php71-laravel58
+#            - php71-laravel58-prefer-lowest
+#            - php72-laravel58
+#            - php72-laravel58-prefer-lowest
+#            - php73-laravel58
+#            - php73-laravel58-prefer-lowest
 
 jobs:
-    php7.1-laravel5.5-prefer-lowest:
+    php71-laravel55-prefer-lowest:
         docker:
             - image: circleci/php:7.1
         steps:
             - install_and_test:
                   laravel: 5.5.*
                   composer_flags: --prefer-lowest
-    php7.1-laravel5.5:
+    php71-laravel55:
         docker:
             - image: circleci/php:7.1
         steps:
             - install_and_test:
                   laravel: 5.5.*
-    php7.2-laravel5.5-prefer-lowest:
+    php72-laravel55-prefer-lowest:
         docker:
             - image: circleci/php:7.2
         steps:
             - install_and_test:
                   laravel: 5.5.*
                   composer_flags: --prefer-lowest
-    php7.2-laravel5.5:
+    php72-laravel55:
         docker:
             - image: circleci/php:7.2
         steps:
             - install_and_test:
                   laravel: 5.5.*
-    php7.3-laravel5.5-prefer-lowest:
+    php73-laravel55-prefer-lowest:
         docker:
             - image: circleci/php:7.3
         steps:
             - install_and_test:
                   laravel: 5.5.*
                   composer_flags: --prefer-lowest
-    php7.3-laravel5.5:
+    php73-laravel55:
         docker:
             - image: circleci/php:7.3
         steps:
