--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0|^8.0",
-        "orchestra/testbench": "~3.6.0|~3.7.0|~3.8.0"
+        "orchestra/testbench": "~3.6.0|~3.7.0|~3.8.0",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
