--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -11,7 +11,7 @@ jobs:
         strategy:
             matrix:
                 php: [7.4, 7.3, 7.2]
-                laravel: [6.*, 5.8.*, 5.7.*, 5.6.*]
+                laravel: [6.*, 5.8.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 os: [ubuntu-latest, windows-latest]
                 include:
@@ -19,10 +19,6 @@ jobs:
                       testbench: 4.*
                     - laravel: 5.8.*
                       testbench: 3.8.*
-                    - laravel: 5.7.*
-                      testbench: 3.7.*
-                    - laravel: 5.6.*
-                      testbench: 3.6.*
 
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
