--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,6 +20,8 @@
         </whitelist>
     </filter>
     <php>
+        <env name="DB_CONNECTION" value="mysql"/>
         <env name="DB_CONNECTION" value="testing"/>
+
     </php>
 </phpunit>
