--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,7 +21,9 @@
     </filter>
     <php>
         <env name="DB_CONNECTION" value="mysql"/>
-        <env name="DB_CONNECTION" value="testing"/>
+        <env name="DB_USERNAME" value="root"/>
+        <env name="DB_DATABASE" value="laravel_query_builder"/>
+
 
     </php>
 </phpunit>
