--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,11 +1,11 @@
 blank_issues_enabled: false
 contact_links:
     - name: Bug Report
-      url: https://vercel.com/support/request
+      url: https://github.com/spatie/laravel-query-builder/issues/new
       about: Report a bug
     - name: Feature Request
-      url: https://github.com/zeit/now/discussions/new?category_id=66161
+      url: https://github.com/spatie/laravel-query-builder/discussions/new?category_id=66161
       about: Share ideas for new features
     - name: Ask a Question
-      url: https://github.com/zeit/now/discussions/new?category_id=66160
+      url: https://github.com/spatie/laravel-query-builder/discussions/new?category_id=66160
       about: Ask the community for help
