--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,8 +4,8 @@ contact_links:
       url: https://github.com/spatie/laravel-query-builder/issues/new
       about: Report a bug
     - name: Feature Request
-      url: https://github.com/spatie/laravel-query-builder/discussions/new?category_id=66161
+      url: https://github.com/spatie/laravel-query-builder/discussions/new?category_id=3330702
       about: Share ideas for new features
     - name: Ask a Question
-      url: https://github.com/spatie/laravel-query-builder/discussions/new?category_id=66160
+      url: https://github.com/spatie/laravel-query-builder/discussions/new?category_id=3330701
       about: Ask the community for help
