--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "ext-json": "*",
         "laravel/legacy-factories": "^1.0.4",
         "orchestra/testbench": "^4.9|^5.8|^6.3",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "mockery/mockery": "^1.4"
     },
     "autoload": {
         "psr-4": {
