--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
-        "illuminate/database": "^6.0|^7.0|^8.0",
-        "illuminate/http": "^6.0|^7.0|^8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0"
+        "illuminate/database": "^6.0|^7.30.4|^8.0",
+        "illuminate/http": "^6.0|7.30.4|^8.0",
+        "illuminate/support": "^6.0|7.30.4|^8.0"
     },
     "require-dev": {
         "ext-json": "*",
