--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,17 +10,13 @@ jobs:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                php: [8.0, 7.4, 7.3]
-                laravel: [8.*, 7.*, 6.*]
+                php: [8.1, 8.0]
+                laravel: [9.0]
                 dependency-version: [prefer-lowest, prefer-stable]
                 os: [ubuntu-latest]
                 include:
-                    - laravel: 8.*
-                      testbench: ^6.3
-                    - laravel: 7.*
-                      testbench: ^5.8
-                    - laravel: 6.*
-                      testbench: ^4.9
+                    - laravel: 9.*
+                      testbench: 7.*
 
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
@@ -33,7 +29,6 @@ jobs:
                 ports:
                     - 3306
                 options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-
 
         steps:
             - name: Checkout code
@@ -60,13 +55,3 @@ jobs:
               run: vendor/bin/phpunit
               env:
                   DB_PORT: ${{ job.services.mysql.ports[3306] }}
-
-            - name: Send Slack notification
-              uses: 8398a7/action-slack@v2
-              if: failure()
-              with:
-                  status: ${{ job.status }}
-                  author_name: ${{ github.actor }}
-              env:
-                SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
