--- a/composer.json
+++ b/composer.json
@@ -20,22 +20,24 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
-        "illuminate/database": "^6.20.13|^7.30.4|^8.22.2",
-        "illuminate/http": "^6.20.13|7.30.4|^8.22.2",
-        "illuminate/support": "^6.20.13|7.30.4|^8.22.2"
+        "php": "^8.0",
+        "illuminate/database": "^9.0",
+        "illuminate/http": "^9.0",
+        "illuminate/support": "^9.0",
+        "spatie/laravel-package-tools": "^1.11"
     },
     "require-dev": {
         "ext-json": "*",
-        "laravel/legacy-factories": "^1.0.4",
-        "orchestra/testbench": "^4.9|^5.8|^6.3",
-        "phpunit/phpunit": "^9.0",
+        "friendsofphp/php-cs-fixer": "^3.0",
         "mockery/mockery": "^1.4",
-        "friendsofphp/php-cs-fixer": "^3.0"
+        "orchestra/testbench": "^7.0",
+        "phpunit/phpunit": "^9.5",
+        "spatie/laravel-ray": "^1.28"
     },
     "autoload": {
         "psr-4": {
-            "Spatie\\QueryBuilder\\": "src"
+            "Spatie\\QueryBuilder\\": "src",
+            "Spatie\\QueryBuilder\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
