--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,36 +1,48 @@
 name: run-tests
 
-on:
-    push:
-    schedule:
-        - cron: '0 0 * * *'
+on: [push, pull_request]
 
 jobs:
     test:
         runs-on: ${{ matrix.os }}
         strategy:
+            fail-fast: false
             matrix:
-                php: [8.1, 8.0]
-                laravel: [9.0]
-                dependency-version: [prefer-lowest, prefer-stable]
                 os: [ubuntu-latest]
+                php: [8.1, 8.0]
+                laravel: [9.*]
+                stability: [prefer-lowest, prefer-stable]
                 include:
                     - laravel: 9.*
                       testbench: 7.*
 
-        name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
+        name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
         services:
             mysql:
-                image: mysql:5.7
+                image: mysql:8.0
                 env:
-                    MYSQL_ALLOW_EMPTY_PASSWORD: yes
+                    MYSQL_USER: user
+                    MYSQL_PASSWORD: secret
                     MYSQL_DATABASE: laravel_query_builder
+                    MYSQL_ROOT_PASSWORD: secretroot
                 ports:
                     - 3306
                 options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
+            redis:
+                image: redis
+                ports:
+                    - 6379:6379
+                options: >-
+                    --health-cmd "redis-cli ping"
+                    --health-interval 10s
+                    --health-timeout 5s
+                    --health-retries 5
+
         steps:
+
+
             - name: Checkout code
               uses: actions/checkout@v2
 
@@ -38,10 +50,10 @@ jobs:
               uses: shivammathur/setup-php@v2
               with:
                   php-version: ${{ matrix.php }}
-                  extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, mysql, mysqli, pdo_mysql, bcmath, soap, intl, gd, exif, iconv, imagick
+                  extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
                   coverage: none
 
-            - name: Setup Problem Matches
+            - name: Setup problem matchers
               run: |
                   echo "::add-matcher::${{ runner.tool_cache }}/php.json"
                   echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
@@ -49,9 +61,13 @@ jobs:
             - name: Install dependencies
               run: |
                   composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
-                  composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
+                  composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
             - name: Execute tests
-              run: vendor/bin/phpunit
+              run: vendor/bin/pest
               env:
+                  DB_USERNAME: user
+                  DB_PASSWORD: secret
                   DB_PORT: ${{ job.services.mysql.ports[3306] }}
+                  REDIS_PORT: 6379
+
