--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,10 @@
         "test-coverage": "phpunit --coverage-html coverage"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "extra": {
         "laravel": {
