--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/database": "^9.0",
-        "illuminate/http": "^9.0",
-        "illuminate/support": "^9.0",
+        "illuminate/database": "^9.0|^10.0",
+        "illuminate/http": "^9.0|^10.0",
+        "illuminate/support": "^9.0|^10.0",
         "spatie/laravel-package-tools": "^1.11"
     },
     "require-dev": {
