--- a/composer.json
+++ b/composer.json
@@ -21,15 +21,15 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/database": "^9.0",
-        "illuminate/http": "^9.0",
-        "illuminate/support": "^9.0",
+        "illuminate/database": "^9.0|^10.0",
+        "illuminate/http": "^9.0|^10.0",
+        "illuminate/support": "^9.0|^10.0",
         "spatie/laravel-package-tools": "^1.11"
     },
     "require-dev": {
         "ext-json": "*",
         "mockery/mockery": "^1.4",
-        "orchestra/testbench": "^7.0",
+        "orchestra/testbench": "^7.0|^8.0",
         "spatie/laravel-ray": "^1.28",
         "pestphp/pest": "^1.20"
     },
